<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sub_water_repo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="teamplaceholder.com.placeholderapp.Controller.SubWaterRepoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/SoftBlue"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <TextView
        android:text="@string/water_report"
        android:textSize="45sp"
        android:textColor="@color/Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_toolbar"
        android:id="@+id/water_report_tv"
        />

    <TextView
        android:text="@string/time_w_example"
        android:textSize="20sp"
        android:textColor="@color/Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/water_report_tv"
        android:id="@+id/time_detail_tv"
        />

    <EditText
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/time_detail_tv"
        android:id="@+id/time_detail_et"
        />

    <TextView
        android:text="@string/location"
        android:textSize="20sp"
        android:textColor="@color/Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_detail_et"
        android:id="@+id/location_tv"
        />

    <EditText
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_tv"
        android:id="@+id/location_et"
        />

    <TextView
        android:text="@string/type"
        android:textSize="20sp"
        android:textColor="@color/Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_et"
        android:id="@+id/water_type_tv"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/water_type_tv"
        android:id="@+id/water_type_spinner"
        />

    <TextView
        android:text="@string/water_condition"
        android:textSize="20sp"
        android:textColor="@color/Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/water_type_spinner"
        android:id="@+id/water_condition_tv"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/water_condition_tv"
        android:id="@+id/water_condition_spinner"
        />

    <Button
        android:text="@string/submit"
        android:textSize="20sp"
        android:textColor="@color/Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/submit_button"
        android:layout_alignTop="@+id/cancel_button" />

    <Button
        android:text="@string/cancel"
        android:textSize="20sp"
        android:textColor="@color/Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/cancel_button"
        />
</RelativeLayout>
