<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:text="@string/username"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:id="@+id/login_screen_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:text="@string/Login_Screen"
        android:layout_weight="0.04" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/usernameBox"
        android:layout_weight="0.04" />

    <TextView
        android:text="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordTextView"
        android:layout_weight="0.04"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordBox" />

    <Button
        android:text="@string/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit_login"
        android:layout_weight="0.04"
        android:onClick="onSubmitLoginPress"/>


    <Button
        android:text="@string/cancel_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cancelButton"
        android:layout_weight="0.04"
        android:onClick="onCancelLoginPress"/>

</LinearLayout>