<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="teamplaceholder.com.placeholderapp.controller.EditProfileActivity">



    <include
        layout="@layout/basic_toolbar"
        android:id="@+id/include2" />

    <TextView
        android:id="@+id/edit_info_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/email_tv"
        android:layout_below="@+id/include2"
        android:layout_marginTop="24dp"
        android:text="@string/edit_profile"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/email_tv"
        android:layout_below="@+id/email_tv"
        android:inputType="textEmailAddress"
        android:minWidth="300dp" />

    <TextView
        android:id="@+id/email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:text="@string/email"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_below="@+id/edit_info_tv"
        android:layout_alignStart="@+id/address_tv"
        android:labelFor="@id/email_et"/>

    <EditText
        android:id="@+id/address_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/address_tv"
        android:layout_below="@+id/address_tv"
        android:minWidth="300dp" />

    <TextView
        android:id="@+id/address_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/email_et"
        android:layout_alignParentStart="true"
        android:layout_marginStart="31dp"
        android:labelFor="@id/address_et"/>

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/address_et"
        android:layout_alignStart="@+id/address_et" />

    <Spinner
        android:id="@+id/title_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/address_et"
        android:layout_alignTop="@+id/title_tv"
        android:minWidth="125dp"
        android:textAlignment="textEnd" />

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCancelPress"
        android:id="@+id/cancel_Button"
        android:layout_marginTop="53dp"
        android:layout_below="@+id/title_spinner"
        android:layout_alignStart="@+id/title_tv"
        android:layout_marginStart="23dp" />

    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSubmitPressed"
        android:layout_alignBaseline="@+id/cancel_Button"
        android:layout_alignBottom="@+id/cancel_Button"
        android:layout_alignEnd="@+id/title_spinner" />
</RelativeLayout>
