<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:water_source_card="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    water_source_card:cardCornerRadius="4dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="175dp">

        <TextView
            android:id="@+id/txtCondition"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="14dp"
            android:background="@color/MediumAquamarine"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            android:text="@string/condition"
            android:textAlignment="gravity"
            android:textColor="@color/White"
            android:textSize="20sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtCondition"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:stretchColumns="0,1,2">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reported_by" />

                <TextView
                    android:id="@+id/txtReportedBy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view"
                    android:textAlignment="textEnd" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_created" />

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view"
                    android:textAlignment="textEnd" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude" />

                <TextView
                    android:id="@+id/txtLatitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view"
                    android:textAlignment="textEnd" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude" />

                <TextView
                    android:id="@+id/txtLongitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view"
                    android:textAlignment="textEnd" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/virus_ppm" />

                <TextView
                    android:id="@+id/txtVirusPPM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view"
                    android:textAlignment="textEnd" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contaminant_ppm" />

                <TextView
                    android:id="@+id/txtContaminantPPM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view"
                    android:textAlignment="textEnd" />
            </TableRow>

        </TableLayout>


        <TextView
            android:id="@+id/txtReportNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txtCondition"
            android:layout_alignBottom="@+id/txtCondition"
            android:layout_alignParentEnd="true"
            android:layout_alignRight="@+id/txtCondition"
            android:layout_marginEnd="10dp"
            android:maxWidth="150dp"
            android:text="@string/text_view"
            android:textAlignment="textEnd" />

    </RelativeLayout>

</android.support.v7.widget.CardView>