<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context="teamplaceholder.com.placeholderapp.Controller.MainActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/SoftBlue"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <Button
        android:text="@string/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:onClick="onLoginPress"
        android:width="125dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        android:textColor="@color/DarkBlue"
        android:id="@+id/Welcome_Text_View"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textAlignment="center"
        android:layout_above="@+id/login_button"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="70dp" />

    <Button
        android:text="@string/Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_button"
        android:onClick="onRegisterPress"
        android:width="125dp"
        android:layout_below="@+id/login_button"
        android:layout_alignStart="@+id/login_button" />
</RelativeLayout>
