<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_submit_quality_report"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="teamplaceholder.com.placeholderapp.Controller.SubmitQualityReportActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/latitude_et"
        android:layout_alignBottom="@+id/latitude_et"
        android:layout_alignParentStart="true"
        android:layout_marginStart="18dp"
        android:labelFor="@+id/latitude_et"
        android:text="@string/latitude"
        android:textColor="@color/Black"
        android:textSize="18sp" />

    <include
        layout="@layout/basic_toolbar"
        android:id="@+id/include3" />

    <TextView
        android:id="@+id/quality_report_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/virus_ppm_tv"
        android:layout_below="@+id/include3"
        android:layout_marginTop="40dp"
        android:text="@string/submit_quality_report"
        android:textColor="@color/Black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/latitude_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp"
        android:inputType="numberDecimal"
        android:text="@string/default_0"
        android:layout_marginTop="67dp"
        android:layout_below="@+id/quality_report_tv"
        android:layout_alignEnd="@+id/overall_condition_spinner"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/longitude_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/virus_ppm_tv"
        android:layout_below="@+id/latitude_et"
        android:layout_marginTop="18dp"
        android:labelFor="@+id/longitude_et"
        android:text="@string/longitude"
        android:textColor="@color/Black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/longitude_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp"
        android:inputType="numberDecimal"
        android:text="@string/default_0"
        android:layout_alignBaseline="@+id/longitude_tv"
        android:layout_alignBottom="@+id/longitude_tv"
        android:layout_alignStart="@+id/latitude_et" />

    <TextView
        android:id="@+id/overall_condition_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/longitude_tv"
        android:layout_below="@+id/longitude_et"
        android:layout_marginTop="16dp"
        android:text="Overall Condition"
        android:textColor="@color/Black"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/overall_condition_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/overall_condition_tv"
        android:layout_marginEnd="12dp"
        android:minWidth="190dp"
        android:textAlignment="textEnd" />

    <TextView
        android:id="@+id/virus_ppm_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/virus_ppm_et"
        android:layout_alignStart="@+id/textView2"
        android:labelFor="@+id/virus_ppm_et"
        android:text="Virus PPM"
        android:textColor="@color/Black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/virus_ppm_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp"
        android:inputType="numberDecimal"
        android:text="@string/default_0"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/overall_condition_spinner"
        android:layout_alignStart="@+id/longitude_et" />

    <TextView
        android:id="@+id/contaminant_ppm_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/virus_ppm_tv"
        android:layout_below="@+id/virus_ppm_tv"
        android:layout_marginTop="37dp"
        android:labelFor="@+id/contaminant_ppm_et"
        android:text="Contaminant PPM"
        android:textColor="@color/Black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/contaminant_ppm_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp"
        android:inputType="numberDecimal"
        android:text="@string/default_0"
        android:layout_alignBottom="@+id/contaminant_ppm_tv"
        android:layout_alignStart="@+id/virus_ppm_et" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:onClick="onSubmitPress"
        android:text="@string/submit"
        android:textColor="@color/Black"
        android:textSize="16sp"
        android:layout_alignBaseline="@+id/cancel_button"
        android:layout_alignBottom="@+id/cancel_button"
        android:layout_alignEnd="@+id/contaminant_ppm_et" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCancelPress"
        android:text="@string/cancel"
        android:textColor="@color/Black"
        android:textSize="16sp"
        android:layout_marginBottom="22dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/overall_condition_tv" />

</RelativeLayout>